Kubernetes/Traefik-Crowdsec-PiHole/Helm/Traefik/Dashboard/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-basicauth
  namespace: traefik
spec:
  basicAuth:
    secret: traefik-dashboard-auth # make sure this matches the secret name
